--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
         select {
             display: block;
             margin-bottom: 10px;
-            width:50%;
-            
+            width: 50%;
+
         }
 
         input[type="number"],
         select {
             width: 50%;
             padding: 5px;
-        
+
         }
 
         button {
@@ -62,6 +62,15 @@
 <body>
     <h1>Sash Calculator</h1>
     <form id="sashForm">
+
+        <label for="frameType">Frame Style：</label>
+        <select id="frameType" name="frameType">
+            <option value="Nailon">Nailon</option>
+            <option value="Retrofit">Retrofit</option>
+            <option value="Block">Block</option>
+            <option value="Block-slop 1 3/4">Block-slop 1 3/4</option>
+        </select>
+
         <label for="windowType">Window Type:</label>
         <select id="windowType" required>
             <option value="singleHung">Single Hung</option>
@@ -119,6 +128,8 @@
 
         function calculateSizes() {
 
+            const frameType = document.getElementById('frameType').value;
+            console.log(frameType)
             const windowType = document.getElementById("windowType").value;
             const measurementType =
                 document.getElementById("measurementType").value;
@@ -131,86 +142,181 @@
 
             let result = "";
 
+            if (frameType === 'Nailon') {
 
-            if (windowType === "xoox") {
-                if (measurementType === "sash") {
-                    const sashH1 = width / 25.4;
-                    const sashH2 = width / 25.4;
-                    const sashW = height / 25.4;
-                    const sashglassW = width - 60.5;
-                    const sashglassH = height - 66;
 
-                    console.log("GW=" + sashglassW + "  GH= " + sashglassH);
+                if (windowType === "xoox") {
+                    if (measurementType === "sash") {
+                        const sashH1 = width / 25.4;
+                        const sashH2 = width / 25.4;
+                        const sashW = height / 25.4;
+                        const sashglassW = width - 60.5;
+                        const sashglassH = height - 66;
 
-                    result = `Sash H1 = ${round(sashH1, 3)} Qty: 1
+                        console.log("GW=" + sashglassW + "  GH= " + sashglassH);
+
+                        result = `Sash H1 = ${round(sashH1, 3)} Qty: 1
 Sash H2 = ${round(sashH2, 3)} Qty: 1
 Sash W = ${round(sashW, 3)} Qty: 2
 Sashglass W = ${sashglassW}
 Sashglass H = ${sashglassH}`;
 
-                    if (showGlass) {
-                        result = result = `Sash H1 = ${round(sashH1, 3)} Qty: 1
+                        if (showGlass) {
+                            result = result = `Sash H1 = ${round(sashH1, 3)} Qty: 1
 Sash H2 = ${round(sashH2, 3)} Qty: 1
 Sash W = ${round(sashW, 3)} Qty: 2`;
-                    }
-                } else {
-                    const sashH1 = round((height - 46 - 15 * 2 - 2) / 25.4, 3);
-                    const sashH2 = round((height - 46 - 15 * 2 - 2) / 25.4, 3);
-                    const sashW = round((width / 2 - 14.5 - 15 + 1) / 25.4, 3);
-                    const sashglassW = width / 2 - 77 - 15 + 3;
-                    const sashglassH = height - 109 - 15 * 2 - 3 - 2;
+                        }
+                    } else {
+                        const sashH1 = round((height - 46 - 2) / 25.4, 3);
+                        const sashH2 = round((height - 46 - 2) / 25.4, 3);
+                        const sashW = round((width / 2 - 14.5 + 1) / 25.4, 3);
+                        const sashglassW = width / 2 - 77 + 3;
+                        const sashglassH = height - 109 * 2 - 3 - 2;
 
-                    result = `Sash H1 = ${sashH1} Qty: 1
+                        result = `Sash H1 = ${sashH1} Qty: 1
 Sash H2 = ${sashH2} Qty: 1
 Sash W = ${sashW} Qty: 2
 Sashglass W = ${sashglassW}
 Sashglass H = ${sashglassH}`;
 
-                    if (showGlass) {
-                        result = `Sash H1 = ${sashH1} Qty: 1
+                        if (showGlass) {
+                            result = `Sash H1 = ${sashH1} Qty: 1
 Sash H2 = ${sashH2} Qty: 1
 Sash W = ${sashW} Qty: 2`;
+                        }
                     }
-                }
-            } else {
-                if (measurementType === "sash") {
-                    const sashH = height / 25.4;
-                    const sashW1 = width / 25.4;
-                    const sashW2 = width / 25.4;
-                    const sashglassW = width - 60.5;
-                    const sashglassH = height - 66;
+                } else {
+                    if (measurementType === "sash") {
+                        const sashH = height / 25.4;
+                        const sashW1 = width / 25.4;
+                        const sashW2 = width / 25.4;
+                        const sashglassW = width - 60.5;
+                        const sashglassH = height - 66;
 
-                    result = `Sash H = ${round(sashH, 3)} Qty: 1
+                        result = `Sash H = ${round(sashH, 3)} Qty: 1
 Sash W1 = ${round(sashW1, 3)} Qty: 2
 Sash W2 = ${round(sashW2, 3)} Qty: 2
 Sashglass W = ${sashglassW}
 Sashglass H = ${sashglassH}`;
 
-                    if (showGlass) {
-                        result = `Sash H = ${round(sashH, 3)} Qty: 1
+                        if (showGlass) {
+                            result = `Sash H = ${round(sashH, 3)} Qty: 1
 Sash W1 = ${round(sashW1, 3)} Qty: 2
 Sash W2 = ${round(sashW2, 3)} Qty: 2`;
-                    }
-                } else {
-                    const sashH1 = round((height - 46 - 15 * 2 - 2) / 25.4, 3);
-                    const sashH2 = round((height - 46 - 15 * 2 - 2) / 25.4, 3);
-                    const sashW = round((width / 2 - 14.5 - 15 + 1) / 25.4, 3);
-                    const sashglassW = width / 2 - 77 - 15 + 3;
-                    const sashglassH = height - 109 - 15 * 2 - 3 - 2;
+                        }
+                    } else {
+                        const sashH1 = round((height - 46 - 2) / 25.4, 3);
+                        const sashH2 = round((height - 46 - 2) / 25.4, 3);
+                        const sashW = round((width / 2 - 14.5 + 1) / 25.4, 3);
+                        const sashglassW = width / 2 - 77 + 3;
+                        const sashglassH = height - 109 - 3 - 2;
 
-                    result = `Sash H1 = ${sashH1} Qty: 1
+                        result = `Sash H1 = ${sashH1} Qty: 1
 Sash H2 = ${sashH2} Qty: 1
 Sash W = ${sashW} Qty: 2
 Sashglass W = ${sashglassW}
 Sashglass H = ${sashglassH}`;
 
-                    if (showGlass) {
-                        `Sash H1 = ${sashH1} Qty: 1
+                        if (showGlass) {
+                            `Sash H1 = ${sashH1} Qty: 1
 Sash H2 = ${sashH2} Qty: 1
 Sash W = ${sashW} Qty: 2`;
+                        }
                     }
                 }
+
+
+
+
+            } else {
+
+
+                if (windowType === "xoox") {
+                    if (measurementType === "sash") {
+                        const sashH1 = width / 25.4;
+                        const sashH2 = width / 25.4;
+                        const sashW = height / 25.4;
+                        const sashglassW = width - 60.5;
+                        const sashglassH = height - 66;
+
+                        console.log("GW=" + sashglassW + "  GH= " + sashglassH);
+
+                        result = `Sash H1 = ${round(sashH1, 3)} Qty: 1
+Sash H2 = ${round(sashH2, 3)} Qty: 1
+Sash W = ${round(sashW, 3)} Qty: 2
+Sashglass W = ${sashglassW}
+Sashglass H = ${sashglassH}`;
+
+                        if (showGlass) {
+                            result = result = `Sash H1 = ${round(sashH1, 3)} Qty: 1
+Sash H2 = ${round(sashH2, 3)} Qty: 1
+Sash W = ${round(sashW, 3)} Qty: 2`;
+                        }
+                    } else {
+                        const sashH1 = round((height - 46 - 15 * 2 - 2) / 25.4, 3);
+                        const sashH2 = round((height - 46 - 15 * 2 - 2) / 25.4, 3);
+                        const sashW = round((width / 2 - 14.5 - 15 + 1) / 25.4, 3);
+                        const sashglassW = width / 2 - 77 - 15 + 3;
+                        const sashglassH = height - 109 - 15 * 2 - 3 - 2;
+
+                        result = `Sash H1 = ${sashH1} Qty: 1
+Sash H2 = ${sashH2} Qty: 1
+Sash W = ${sashW} Qty: 2
+Sashglass W = ${sashglassW}
+Sashglass H = ${sashglassH}`;
+
+                        if (showGlass) {
+                            result = `Sash H1 = ${sashH1} Qty: 1
+Sash H2 = ${sashH2} Qty: 1
+Sash W = ${sashW} Qty: 2`;
+                        }
+                    }
+                } else {
+                    if (measurementType === "sash") {
+                        const sashH = height / 25.4;
+                        const sashW1 = width / 25.4;
+                        const sashW2 = width / 25.4;
+                        const sashglassW = width - 60.5;
+                        const sashglassH = height - 66;
+
+                        result = `Sash H = ${round(sashH, 3)} Qty: 1
+Sash W1 = ${round(sashW1, 3)} Qty: 2
+Sash W2 = ${round(sashW2, 3)} Qty: 2
+Sashglass W = ${sashglassW}
+Sashglass H = ${sashglassH}`;
+
+                        if (showGlass) {
+                            result = `Sash H = ${round(sashH, 3)} Qty: 1
+Sash W1 = ${round(sashW1, 3)} Qty: 2
+Sash W2 = ${round(sashW2, 3)} Qty: 2`;
+                        }
+                    } else {
+                        const sashH1 = round((height - 46 - 15 * 2 - 2) / 25.4, 3);
+                        const sashH2 = round((height - 46 - 15 * 2 - 2) / 25.4, 3);
+                        const sashW = round((width / 2 - 14.5 - 15 + 1) / 25.4, 3);
+                        const sashglassW = width / 2 - 77 - 15 + 3;
+                        const sashglassH = height - 109 - 15 * 2 - 3 - 2;
+
+                        result = `Sash H1 = ${sashH1} Qty: 1
+Sash H2 = ${sashH2} Qty: 1
+Sash W = ${sashW} Qty: 2
+Sashglass W = ${sashglassW}
+Sashglass H = ${sashglassH}`;
+
+                        if (showGlass) {
+                            `Sash H1 = ${sashH1} Qty: 1
+Sash H2 = ${sashH2} Qty: 1
+Sash W = ${sashW} Qty: 2`;
+                        }
+                    }
+                }
+
+
+
+
             }
+
+
 
             document.getElementById("result").textContent = result;
         };
