--- a/index.html
+++ b/index.html
@@ -205,9 +205,10 @@ Sash W1 = ${round(sashW1, 3)} Qty: 2
 Sash W2 = ${round(sashW2, 3)} Qty: 2`;
                         }
                     } else {
-                        const sashH1 = round((height - 46 - 2) / 25.4, 3);
-                        const sashH2 = round((height - 46 - 2) / 25.4, 3);
-                        const sashW = round((width / 2 - 14.5 + 1) / 25.4, 3);
+                        const sashW1 = round((width / 2 - 14.5 + 1) / 25.4, 3);
+                        const sashW2 = round((width / 2 - 14.5 + 1) / 25.4, 3);
+                        const sashH = round((height - 46 - 2) / 25.4, 3);
+                        
                         const sashglassW = width / 2 - 77 + 3;
                         const sashglassH = height - 109 - 3 - 2;
 
@@ -291,9 +292,10 @@ Sash W1 = ${round(sashW1, 3)} Qty: 2
 Sash W2 = ${round(sashW2, 3)} Qty: 2`;
                         }
                     } else {
-                        const sashH1 = round((height - 46 - 15 * 2 - 2) / 25.4, 3);
-                        const sashH2 = round((height - 46 - 15 * 2 - 2) / 25.4, 3);
-                        const sashW = round((width / 2 - 14.5 - 15 + 1) / 25.4, 3);
+                        const sashW1 = round((width / 2 - 14.5 - 15 + 1) / 25.4, 3);
+                        const sashW2 = round((width / 2 - 14.5 - 15 + 1) / 25.4, 3);
+                        const sashH = round((height - 46 - 15 * 2 - 2) / 25.4, 3);
+                        
                         const sashglassW = width / 2 - 77 - 15 + 3;
                         const sashglassH = height - 109 - 15 * 2 - 3 - 2;
 
