--- a/index.html
+++ b/index.html
@@ -205,12 +205,12 @@ Sash W1 = ${round(sashW1, 3)} Qty: 2
 Sash W2 = ${round(sashW2, 3)} Qty: 2`;
                         }
                     } else {
-                        const sashW1 = round((width / 2 - 14.5 + 1) / 25.4, 3);
-                        const sashW2 = round((width / 2 - 14.5 + 1) / 25.4, 3);
-                        const sashH = round((height - 46 - 2) / 25.4, 3);
+                        const sashW1 = round((width - 14.5 + 1) / 25.4, 3);
+                        const sashW2 = round((width - 14.5 + 1) / 25.4, 3);
+                        const sashH = round((height/2 - 46 - 2) / 25.4, 3);
                         
-                        const sashglassW = width / 2 - 77 + 3;
-                        const sashglassH = height - 109 - 3 - 2;
+                        const sashglassW = width - 77 + 3;
+                        const sashglassH = height/2 - 109 - 3 - 2;
 
                         result = `Sash H1 = ${sashH1} Qty: 1
 Sash H2 = ${sashH2} Qty: 1
@@ -292,12 +292,12 @@ Sash W1 = ${round(sashW1, 3)} Qty: 2
 Sash W2 = ${round(sashW2, 3)} Qty: 2`;
                         }
                     } else {
-                        const sashW1 = round((width / 2 - 14.5 - 15 + 1) / 25.4, 3);
-                        const sashW2 = round((width / 2 - 14.5 - 15 + 1) / 25.4, 3);
-                        const sashH = round((height - 46 - 15 * 2 - 2) / 25.4, 3);
+                        const sashW1 = round((width - 14.5 - 15 + 1) / 25.4, 3);
+                        const sashW2 = round((width - 14.5 - 15 + 1) / 25.4, 3);
+                        const sashH = round((height/2 - 46 - 15 * 2 - 2) / 25.4, 3);
                         
-                        const sashglassW = width / 2 - 77 - 15 + 3;
-                        const sashglassH = height - 109 - 15 * 2 - 3 - 2;
+                        const sashglassW = width - 77 - 15 + 3;
+                        const sashglassH = height/2 - 109 - 15 * 2 - 3 - 2;
 
                         result = `Sash H1 = ${sashH1} Qty: 1
 Sash H2 = ${sashH2} Qty: 1
