--- a/index.html
+++ b/index.html
@@ -212,9 +212,9 @@ Sash W2 = ${round(sashW2, 3)} Qty: 2`;
                         const sashglassW = width - 77 + 3;
                         const sashglassH = height/2 - 109 - 3 - 2;
 
-                        result = `Sash H1 = ${sashH1} Qty: 1
-Sash H2 = ${sashH2} Qty: 1
-Sash W = ${sashW} Qty: 2
+                        result = `Sash W1 = ${sashW1} Qty: 1
+Sash W2 = ${sashW2} Qty: 1
+Sash H = ${sashH} Qty: 2
 Sashglass W = ${sashglassW}
 Sashglass H = ${sashglassH}`;
 
@@ -299,9 +299,9 @@ Sash W2 = ${round(sashW2, 3)} Qty: 2`;
                         const sashglassW = width - 77 - 15 + 3;
                         const sashglassH = height/2 - 109 - 15 * 2 - 3 - 2;
 
-                        result = `Sash H1 = ${sashH1} Qty: 1
-Sash H2 = ${sashH2} Qty: 1
-Sash W = ${sashW} Qty: 2
+                        result = `Sash W1 = ${sashW1} Qty: 1
+Sash W2 = ${sashW2} Qty: 1
+Sash H = ${sashH} Qty: 2
 Sashglass W = ${sashglassW}
 Sashglass H = ${sashglassH}`;
 
